--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <div class="member-details-wrap">
                 <div class="member-details-middle sm-top3">
                     <div class="row ">
-                        <h2>Why Join <span>IGNITE?</span></h2>
+                        <h2>Why Join <span>IGNITE</span></h2>
                         <div class="blog-item">
                             <div class="row align-items-center ">
                                 <div class="col-sm-12 col-lg-4 col-md-4 ">
