--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="col-md-6 col-lg-7 order-1">
                 <div class="about-content">
                     <!-- <h6>Our Services</h6> -->
-                    <h2>About <br> <span>WissionTalks</span></h2>
+                    <h2>About <span>WissionTalks</span></h2>
                     <p style="text-align: justify;"><strong>WissionTalks</strong>, an initiative by "Wissionarie," is committed to reshaping the future of entrepreneurship by inspiring and guiding the young generation towards a purposeful vision. This platform nurtures passion and empowers it to evolve into thriving businesses. WissionTalks distinguishes itself in the ecosystem by blending quality and uniqueness.</p>
                 </div>
             </div>
@@ -354,13 +354,13 @@
     </div>
 </div> -->
 
-<div class="page-content-wrapper join-ignite" style="padding-top: 50px;">
+<div class="page-content-wrapper join-ignite" style="padding-top: 50px; background-image: url(assets/img/home/why-joint-ignite-bg-img.png);">
     <div class="member-details-wrapper sm-top2">
         <div class="container">
             <div class="member-details-wrap">
                 <div class="member-details-middle sm-top3">
                     <div class="row ">
-                        <h2>Why Join <span>IGNITE</span></h2>
+                        <h2>Why Join <span>IGNITE?</span></h2>
                         <div class="blog-item">
                             <div class="row align-items-center ">
                                 <div class="col-sm-12 col-lg-4 col-md-4 ">
@@ -1020,7 +1020,7 @@ info@igniteap.com <br>
                     </div>
 
                     <div class="sign-up-notification">
-                        <p>Not Resisted? <a href="#">Create Account Now.</a></p>
+                        <p>Not Resisted? <a href="user-registration.html">Create Account Now.</a></p>
                     </div>
                 </div>
             </div>
