--- a/user-registration.html
+++ b/user-registration.html
@@ -146,7 +146,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="contact-form-area contact-method">
-                        <h3 style="color: #0e0067;">Send us a Message</h3>
+                        <h3 style="color: #0e0067;">User Registration</h3>
 
                         <div class="contact-form-wrap">
                             <form action="https://htmlmail.hasthemes.com/raju/businex-mail.php" method="post"
@@ -186,7 +186,39 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-12">
+                                    <div class="col-md-12">
+                                        <div class="single-input-item">
+                                            <label>
+                                                <input type="text" id="username" name="username" placeholder="user name *" required/>
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="single-input-item">
+                                            <label>
+                                                <input type="password" id="password" name="password" placeholder="password *" required/>
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="single-input-item">
+                                            <label>
+                                                <input type="password" id="confirm_password" name="confirm_password" placeholder="confirm password *" required/>
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                    <div class="single-input-item mb-0 mt-40">
+                                        <button type="submit" class="btn-outline">Register</button>
+                                    </div>
+
+                                    <!-- <button type="submit">Register</button> -->
+
+                                    
+
+                                    <!-- <div class="col-12">
                                         <div class="single-input-item">
                                             <label for="con_message" class="sr-only m-0"></label>
                                             <textarea name="con_message" id="con_message" cols="30" rows="7"
@@ -198,7 +230,7 @@
                                         </div>
 
                                         <div class="form-message"></div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </form>
                         </div>
@@ -221,7 +253,7 @@
                                 <a href="http://www.facebook.com/Igniteapfest"><i class="mdi mdi-facebook"></i></a>
                                 <a href="http://www.twitter.com/Igniteapfest"><i class="mdi mdi-twitter"></i></a>
                                 <a href="https://www.linkedin.com/company/igniteapfest/"><i class="mdi mdi-linkedin"></i></a>
-                                <!-- <a href="#"><i class="mdi mdi"></i></a> -->
+                                
                             </div>
                         </div>
                     </div>
