--- a/events.html
+++ b/events.html
@@ -878,7 +878,7 @@ info@igniteap.com <br>
                     </div>
 
                     <div class="sign-up-notification">
-                        <p>Not Resisted? <a href="#">Create Account Now.</a></p>
+                        <p>Not Resisted? <a href="user-registration.html">Create Account Now.</a></p>
                     </div>
                 </div>
             </div>
