fixed all issues

--- a/events-2.html
+++ b/events-2.html
@@ -239,7 +239,7 @@
             the path to progress</p> 
                 <article class="blog-post-details">
                     <figure class="blog-post-thumb">
-                        <img src="assets/img/blog/blog-details-1.jpg" alt="Blog"/>
+                        <img src="assets/img/events/our-events-day-02.png" alt="Blog"/>
                     </figure>
                 </article>
 
@@ -334,7 +334,7 @@
                                     <div class="row align-items-center ">
                                         <div class="col-sm-12 col-lg-4 col-md-4 ">
                                             <figure class="blog-thumb">
-                                                <a href="#"><img src="assets/img/home/Impact.png" alt="Ignite-Blog" height="300" width="650"></a>
+                                                <a href="#"><img src="assets/img/events/awareness-session-on-entrepreneurship.png" alt="Ignite-Blog" height="300" width="650"></a>
                                             </figure>
                                         </div>
                                         <div class="col-sm-12 col-lg-8 col-md-8">
@@ -356,7 +356,7 @@
                                     <div class="row align-items-center ">
                                         <div class="col-sm-12 col-lg-4 col-md-4 ">
                                             <figure class="blog-thumb">
-                                                <a href="#"><img src="assets/img/home/Impact.png" alt="Ignite-Blog" height="300" width="650"></a>
+                                                <a href="#"><img src="assets/img/events/idea-feedBack.png" alt="Ignite-Blog" height="300" width="650"></a>
                                             </figure>
                                         </div>
                                         <div class="col-sm-12 col-lg-8 col-md-8">
@@ -377,7 +377,7 @@
                                     <div class="row align-items-center ">
                                         <div class="col-sm-12 col-lg-4 col-md-4 ">
                                             <figure class="blog-thumb">
-                                                <a href="#"><img src="assets/img/home/Impact.png" alt="Ignite-Blog" height="300" width="650"></a>
+                                                <a href="#"><img src="assets/img/events/empathy-and-understanding.png" alt="Ignite-Blog" height="300" width="650"></a>
                                             </figure>
                                         </div>
                                         <div class="col-sm-12 col-lg-8 col-md-8">
@@ -394,7 +394,7 @@
                                     <div class="row align-items-center ">
                                         <div class="col-sm-12 col-lg-4 col-md-4 ">
                                             <figure class="blog-thumb">
-                                                <a href="#"><img src="assets/img/home/Impact.png" alt="Ignite-Blog" height="300" width="650"></a>
+                                                <a href="#"><img src="assets/img/events/creative-problem-solving.png" alt="Ignite-Blog" height="300" width="650"></a>
                                             </figure>
                                         </div>
                                         <div class="col-sm-12 col-lg-8 col-md-8">
@@ -411,7 +411,7 @@
                                     <div class="row align-items-center ">
                                         <div class="col-sm-12 col-lg-4 col-md-4 ">
                                             <figure class="blog-thumb">
-                                                <a href="#"><img src="assets/img/home/Impact.png" alt="Ignite-Blog" height="300" width="650"></a>
+                                                <a href="#"><img src="assets/img/events/real-world-relevance.png" alt="Ignite-Blog" height="300" width="650"></a>
                                             </figure>
                                         </div>
                                         <div class="col-sm-12 col-lg-8 col-md-8">
@@ -427,7 +427,7 @@
                                     <div class="row align-items-center ">
                                         <div class="col-sm-12 col-lg-4 col-md-4 ">
                                             <figure class="blog-thumb">
-                                                <a href="#"><img src="assets/img/home/Impact.png" alt="Ignite-Blog" height="300" width="650"></a>
+                                                <a href="#"><img src="assets/img/events/innovation.png" alt="Ignite-Blog" height="300" width="650"></a>
                                             </figure>
                                         </div>
                                         <div class="col-sm-12 col-lg-8 col-md-8">
