--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                         </ul>
 
                         <div class="col-lg-6 text-center" style="width: 100%; padding-top: 20px;">
-                            <a href="events.html" class="btn-reg">Click to Register</a>
+                            <a href="events.html" class="btn-reg">View More</a>
                         </div>
                     </div>
                 </div>
@@ -747,7 +747,7 @@
                         </ul>
 
                         <div class="col-lg-6 text-center" style="width: 100%; padding-top: 30px;">
-                            <a href="events-2.html" class="btn-reg">Click to Register</a>
+                            <a href="events-2.html" class="btn-reg">View More</a>
                         </div>
                     </div>
                 </div>
