--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 <!--== End Header Area Wrapper ==-->
 
 <!--== Start Page Header Area ==-->
-<div class="page-header-area bg-img" data-bg="assets/img/page-header.jpg">
+<div class="page-header-area bg-img" data-bg="assets/img/contact-banner.png">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 m-auto text-center">
