--- a/student-idea-submission.html
+++ b/student-idea-submission.html
@@ -128,7 +128,7 @@
             <div class="col-lg-10 col-xl-8 m-auto text-center">
                 <div class="page-header-content-inner">
                     <div class="page-header-content">
-                        <h2>Contact Us</h2>
+                        <h2>Student Idea </h2>
                         <!-- <p>Businex always try to provide the best Business Solutions for Clinets
                             to grow up their Business very sharply and smoothly.</p> -->
                     </div>
