--- a/user-registration.html
+++ b/user-registration.html
@@ -128,7 +128,7 @@
             <div class="col-lg-10 col-xl-8 m-auto text-center">
                 <div class="page-header-content-inner">
                     <div class="page-header-content">
-                        <h2>Contact Us</h2>
+                        <h2> Student Register</h2>
                         <!-- <p>Businex always try to provide the best Business Solutions for Clinets
                             to grow up their Business very sharply and smoothly.</p> -->
                     </div>
@@ -238,8 +238,8 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <div class="contact-information contact-method">
-                        <div class="contact-info-con">
+                    <div class="contact-information contact-method user-register" style="background-color: #ffff;">
+                        <!-- <div class="contact-info-con">
                             <h3>Contact Info</h3>
 
                             <div class="widget-item m-0">
@@ -255,7 +255,7 @@
                                 <a href="https://www.linkedin.com/company/igniteapfest/"><i class="mdi mdi-linkedin"></i></a>
                                 
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
