--- a/about.html
+++ b/about.html
@@ -590,7 +590,7 @@ landscape as a whole.
                         Ideathon that promises to fan the 
                         flames of innovation and illuminate 
                         the path to progress!</p>
-                    <a href="about.html" class="btn-about">MORE DETAILS <i class="mdi mdi-chevron-double-right"></i></a>
+                    <!-- <a href="about.html" class="btn-about">MORE DETAILS <i class="mdi mdi-chevron-double-right"></i></a> -->
                 </div>
             </div>
         </div>
