--- a/about.html
+++ b/about.html
@@ -1061,7 +1061,7 @@ info@igniteap.com <br>
                     </div>
 
                     <div class="sign-up-notification">
-                        <p>Not Resisted? <a href="user-registration.html">Create Account Now.</a></p>
+                        <p>Not Register? <a href="user-registration.html">Create Account Now.</a></p>
                     </div>
                 </div>
             </div>
