--- a/user-registration.html
+++ b/user-registration.html
@@ -393,7 +393,7 @@ info@igniteap.com <br>
                     </div>
 
                     <div class="sign-up-notification">
-                        <p>Not Resisted? <a href="user-registration.html">Create Account Now.</a></p>
+                        <p>Not Register? <a href="user-registration.html">Create Account Now.</a></p>
                     </div>
                 </div>
             </div>
