sliders add and updates completed

--- a/events-2.html
+++ b/events-2.html
@@ -108,7 +108,7 @@
             <div class="col-7 col-lg-3">
                 
                 <div class="header-action text-end login-user-btn">
-                    <!-- <a href="tel:00199823568658" class="tel-no">+91 91330 63307</a> -->
+                    <a href="#" class="tel-no">Login User</a>
                     <button class="btn-cog">
                         <i class="fa fa-user-circle"></i>
                     </button>
@@ -855,7 +855,7 @@ info@igniteap.com <br>
         </div>
 
         <!-- Start Off Canvas Content -->
-        <div class="off-canvas-content mb-sm-30">
+        <div class="off-canvas-content mb-sm-30 mt-30">
             <div class="off-canvas-item">
                 <div class="log-in-content-wrap">
                     <h2>Login</h2>
@@ -896,7 +896,7 @@ info@igniteap.com <br>
                         <script>
                             document.write(new Date().getFullYear())
                         </script>
-                        Businex Ltd. All Rights Reserved.
+                        All Rights Reserved Ignite AP.
                     </p>
                 </div>
             </div>
