--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
             <div class="col-7 col-lg-3">
                 
                 <div class="header-action text-end login-user-btn">
-                    <!-- <a href="tel:00199823568658" class="tel-no">+91 91330 63307</a> -->
+                    <a href="#" class="tel-no">Login User</a>
                     <button class="btn-cog">
                         <i class="fa fa-user-circle"></i>
                     </button>
@@ -218,9 +218,9 @@
                                 </address>
                             </div>
                             <div class="member-social-icons mt-30">
-                                <a href="http://www.facebook.com/Igniteapfest"><i class="mdi mdi-facebook"></i></a>
-                                <a href="http://www.twitter.com/Igniteapfest"><i class="mdi mdi-twitter"></i></a>
-                                <a href="https://www.linkedin.com/company/igniteapfest/"><i class="mdi mdi-linkedin"></i></a>
+                                <a href="http://www.facebook.com/Igniteapfest" target="_blank"><i class="mdi mdi-facebook"></i></a>
+                                <a href="http://www.twitter.com/Igniteapfest" target="_blank"><i class="mdi mdi-twitter"></i></a>
+                                <a href="https://www.linkedin.com/company/igniteapfest/" target="_blank"><i class="mdi mdi-linkedin"></i></a>
                                 <!-- <a href="#"><i class="mdi mdi"></i></a> -->
                             </div>
                         </div>
@@ -338,7 +338,7 @@ info@igniteap.com <br>
         </div>
 
         <!-- Start Off Canvas Content -->
-        <div class="off-canvas-content mb-sm-30">
+        <div class="off-canvas-content mb-sm-30 mt-30">
             <div class="off-canvas-item">
                 <div class="log-in-content-wrap">
                     <h2>Login</h2>
@@ -379,7 +379,7 @@ info@igniteap.com <br>
                         <script>
                             document.write(new Date().getFullYear())
                         </script>
-                        Businex Ltd. All Rights Reserved.
+                        All Rights Reserved Ignite AP.
                     </p>
                 </div>
             </div>
